--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+html,
 body {
-  background-color: blueviolet;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+img {
+  max-height: 100vh;
+  width: auto;
+  object-fit: contain;
+}
+body {
+  background-color: #6b2c3e;
 }
