--- a/style.css
+++ b/style.css
@@ -47,3 +47,25 @@ a {
   width: 90%;
   margin-left: 4%;
 }
+#right {
+  display: flex;
+  flex: auto;
+  flex-direction: column;
+  max-width: 902px;
+}
+.one,
+.two {
+  display: flex;
+  flex: auto;
+}
+.one {
+  display: flex;
+  flex-direction: column;
+  max-height: 324px;
+}
+.speech,
+.afterthought {
+  color: #f0a07e;
+  font-size: 30px;
+  margin-left: 10%;
+}
